--- a/src/UI/Windows/Views/Controls/SetReaderLedControl.xaml
+++ b/src/UI/Windows/Views/Controls/SetReaderLedControl.xaml
@@ -4,12 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:OSDPBench.Windows.Views.Controls"
+             xmlns:markup="clr-namespace:OSDPBench.Windows.Markup"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance controls:SetReaderLedControl}"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <StackPanel Orientation="Vertical">
-            <Label Content="LED Color"
+            <Label Content="{markup:Localize Manage_LedColor}"
                    Target="{Binding ElementName=ColorComboBox}" />
             <ComboBox Name="ColorComboBox"
                       Margin="0 0 20 0"
