--- a/src/UI/Windows/Views/Controls/FileTransferControl.xaml
+++ b/src/UI/Windows/Views/Controls/FileTransferControl.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:models="clr-namespace:OSDPBench.Core.Models;assembly=OSDPBench.Core"
              xmlns:converters="clr-namespace:OSDPBench.Windows.Converters"
              xmlns:markup="clr-namespace:OSDPBench.Windows.Markup"
@@ -12,12 +13,6 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
-        
-        <Style TargetType="ProgressBar">
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="BorderBrush" Value="#E6E6E6"/>
-            <Setter Property="BorderThickness" Value="1"/>
-        </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -29,29 +24,31 @@
         </Grid.RowDefinitions>
         
         <StackPanel Grid.Row="0" 
-                    Orientation="Vertical">
+                    Style="{StaticResource Section.Container}">
             <Label Content="{markup:Localize Manage_SelectedFile}"
+                   Style="{StaticResource Label.Standard}"
                    Target="{Binding ElementName=FilePathTextBox}"/>
             <DockPanel>
-                <Button Content="{markup:Localize Manage_Browse}"
-                        DockPanel.Dock="Right"
-                        Margin="10,0,0,0"
-                        Click="BrowseFileButton_OnClick"
-                        IsEnabled="{Binding IsBusy, Converter={StaticResource InverseBoolConverter}}"/>
+                <ui:Button Content="{markup:Localize Manage_Browse}"
+                           Style="{StaticResource Button.Secondary}"
+                           DockPanel.Dock="Right"
+                           Click="BrowseFileButton_OnClick"
+                           IsEnabled="{Binding IsBusy, Converter={StaticResource InverseBoolConverter}}"/>
                 <TextBox Name="FilePathTextBox"
                          Text="{Binding FilePath}"
                          IsReadOnly="True"/>
             </DockPanel>
         </StackPanel>
 
-        <StackPanel Grid.Row="2">
-            <Label Content="{markup:Localize Manage_Progress}"/>
+        <StackPanel Grid.Row="2"
+                    Style="{StaticResource Section.Container}">
+            <Label Content="{markup:Localize Manage_Progress}"
+                   Style="{StaticResource Label.Standard}"/>
             <ProgressBar Value="{Binding ProgressPercentage, Mode=OneWay}"
-                                  Maximum="100"
-                                  Height="20"
-                                  Margin="0,0,0,5"/>
+                         Style="{StaticResource ProgressBar.FileTransfer}"/>
             <Grid>
-                <TextBlock HorizontalAlignment="Left">
+                <TextBlock Style="{StaticResource Text.Caption}"
+                           HorizontalAlignment="Left">
                     <Run Text="{Binding TransferredBytes, StringFormat={}{0:N0}}"/>
                     <Run Text="{markup:Localize Manage_BytesOf}"/>
                     <Run Text="{Binding TotalBytes, StringFormat={}{0:N0}}"/>
@@ -61,6 +58,7 @@
         </StackPanel>
 
         <TextBlock Grid.Row="4" 
+                   Style="{StaticResource Text.Body}"
                    Text="{Binding StatusMessage}"
                    TextWrapping="Wrap"/>
     </Grid>
