--- a/src/UI/Windows/Views/Pages/MonitorPage.xaml
+++ b/src/UI/Windows/Views/Pages/MonitorPage.xaml
@@ -49,28 +49,9 @@
 			</StackPanel>
 		</Grid>
 		
-		<StackPanel  Orientation="Vertical"
-		             Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Disconnected, Mode=OneWay}">
-			<TextBlock
-				FontSize="32"
-				Margin="20 10 20 0"
-				HorizontalAlignment="Center"
-				TextAlignment="Center"
-				TextWrapping="Wrap"
-				Foreground="Orange"
-				Text="{markup:Localize Monitor_DeviceNotConnected}"/>
-			<TextBlock
-				FontSize="24"
-				Margin="20 10 20 0"
-				HorizontalAlignment="Center"
-				TextAlignment="Center"
-				TextWrapping="Wrap"
-				Text="{markup:Localize Monitor_ConnectionPageDetails}"/>
-		</StackPanel>
-		<StackPanel  Orientation="Vertical"
-		             Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}">
-			<StackPanel  Orientation="Vertical"
-			             Visibility="{Binding Path=ViewModel.UsingSecureChannel, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}">
+		<Border Style="{StaticResource Card.Bordered}"
+		        Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Disconnected, Mode=OneWay}">
+			<StackPanel Orientation="Vertical">
 				<TextBlock
 					FontSize="32"
 					Margin="20 10 20 0"
@@ -78,24 +59,47 @@
 					TextAlignment="Center"
 					TextWrapping="Wrap"
 					Foreground="Orange"
-					Text="{markup:Localize Monitor_MonitoringNotAvailable}"/>
+					Text="{markup:Localize Monitor_DeviceNotConnected}"/>
 				<TextBlock
 					FontSize="24"
 					Margin="20 10 20 0"
 					HorizontalAlignment="Center"
 					TextAlignment="Center"
 					TextWrapping="Wrap"
-					Text="{markup:Localize Monitor_SecureChannelUpdate}"/>
+					Text="{markup:Localize Monitor_ConnectionPageDetails}"/>
 			</StackPanel>
-			<StackPanel  Orientation="Vertical"
-			             Visibility="{Binding Path=ViewModel.UsingSecureChannel, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Invert, Mode=OneWay}">
-
-				<DataGrid ItemsSource="{Binding ViewModel.TraceEntriesView}" 
-				          AutoGenerateColumns="False" 
-				          CanUserAddRows="False" 
-				          IsReadOnly="True" 
-				          Margin="10 5" 
-				          RowDetailsVisibilityMode="Collapsed">
+		</Border>
+		<StackPanel  Orientation="Vertical"
+		             Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}">
+			<Border Style="{StaticResource Card.Bordered}"
+			        Visibility="{Binding Path=ViewModel.UsingSecureChannel, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}">
+				<StackPanel Orientation="Vertical">
+					<TextBlock
+						FontSize="32"
+						Margin="20 10 20 0"
+						HorizontalAlignment="Center"
+						TextAlignment="Center"
+						TextWrapping="Wrap"
+						Foreground="Orange"
+						Text="{markup:Localize Monitor_MonitoringNotAvailable}"/>
+					<TextBlock
+						FontSize="24"
+						Margin="20 10 20 0"
+						HorizontalAlignment="Center"
+						TextAlignment="Center"
+						TextWrapping="Wrap"
+						Text="{markup:Localize Monitor_SecureChannelUpdate}"/>
+				</StackPanel>
+			</Border>
+			<Border Style="{StaticResource Card.Bordered}"
+			        Visibility="{Binding Path=ViewModel.UsingSecureChannel, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Invert, Mode=OneWay}">
+				<StackPanel Orientation="Vertical">
+					<DataGrid ItemsSource="{Binding ViewModel.TraceEntriesView}" 
+					          AutoGenerateColumns="False" 
+					          CanUserAddRows="False" 
+					          IsReadOnly="True" 
+					          Margin="10 5" 
+					          RowDetailsVisibilityMode="Collapsed">
 
 					<!-- DataGrid Columns -->
 					<DataGrid.Columns>
@@ -124,9 +128,10 @@
 							           FontFamily="Consolas"
 							           Margin="10" />
 						</DataTemplate>
-					</DataGrid.RowDetailsTemplate>
-				</DataGrid>
-			</StackPanel>
+						</DataGrid.RowDetailsTemplate>
+					</DataGrid>
+				</StackPanel>
+			</Border>
 		</StackPanel>
     </StackPanel>
 </Page>
